fix: spacing and margin for rating section

--- a/help/styles/styles.css
+++ b/help/styles/styles.css
@@ -527,8 +527,8 @@ main .section.rating .default-content-wrapper ul {
 }
 
 main .section.rating .default-content-wrapper ul li {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 16px;
+  margin-bottom: 0;
 }
 
 main .section.rating .default-content-wrapper p {
@@ -569,7 +569,7 @@ main .section.rating .default-content-wrapper a.button:hover {
 @media (min-width: 600px) {
   main .section.rating .default-content-wrapper {
     margin: unset;
-    margin-left: 30%;
+    margin-left: 50%;
     width: unset;
   }
 
